--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
@@ -36,6 +37,7 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 
 [compat]
 julia = "1.4"
